--- a/test/index.html
+++ b/test/index.html
@@ -4,12 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=], initial-scale=1.0">
-    <link rel="stylesheet" href="../css/utilities.css">
+    <link rel="stylesheet" href="../css/buttons.css">
     <title>Hestus</title>
 </head>
 <body>
 
-   <span class="border border_red">This is manas</span>
+    
+    <button class="btn btn_blue_focus">Click Me</button>
     
 </body>
 </html>
