--- a/test/index.html
+++ b/test/index.html
@@ -1,16 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=], initial-scale=1.0">
-    <link rel="stylesheet" href="../css/buttons.css">
+    <link rel="stylesheet" href="../css/containers.css">
+    <link rel="stylesheet" href="./style.css">
     <title>Hestus</title>
 </head>
+
 <body>
 
-    
-    <button class="btn btn_blue_focus">Click Me</button>
-    
+    <div class="container">
+        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
+        standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make
+        a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
+        remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing
+        Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions
+        of Lorem Ipsum.
+    </div>
+
+
 </body>
+
 </html>
