--- a/added/animation.html
+++ b/added/animation.html
@@ -10,8 +10,71 @@
   </head>
   <body>
     <div class="container animate_bounce">
-        <h1 class="animate__animated animate__bounce">An animated element</h1>
-        <h1 class="animate__animated animate__flash">An animated element</h1>
+        <div class="box">
+          <h1 class="animate__animated animate__bounce">Hello</h1>
+        </div>
+        <div class="box">
+          <h1 class="animate__animated animate__flash">Hello</h1>
+        </div>
+        <div class="box">
+          <h1 class="animate__animated animate__rubberBand">Hello</h1>
+        </div>
+        <div class="box">
+          <h1 class="animate__animated animate__pulse">Hello</h1>
+        </div>
+        <div class="box">
+          <h1 class="animate__animated animate__shakeX">Hello</h1>
+        </div>
+        <div class="box">
+          <h1 class="animate__animated animate__headShake">Hello</h1>
+        </div>
+        <div class="box">
+          <h1 class="animate__animated animate__swing">Hello</h1>
+        </div>
+        <div class="box">
+          <h1 class="animate__animated animate__backInDown">Hello</h1>
+        </div>
+        <div class="box">
+          <h1 class="animate__animated animate__backOutDown">Hello</h1>
+        </div>
+        <div class="box">
+          <h1 class="animate__animated animate__bounceInLeft">Hello</h1>
+        </div>
+        <div class="box">
+          <h1 class="animate__animated animate__bounceIn">Hello</h1>
+        </div>
+        <div class="box">
+          <h1 class="animate__animated animate__bounceOutDown">Hello</h1>
+        </div>
+        <div class="box">
+          <h1 class="animate__animated animate__fadeInDownBig">Hello</h1>
+        </div>
+        <div class="box">
+          <h1 class="animate__animated animate__fadeOut">Hello</h1>
+        </div>
+        <div class="box">
+          <h1 class="animate__animated animate__fadeOutDownBig">Hello</h1>
+        </div>
+        <div class="box">
+          <h1 class="animate__animated animate__flip">Hello</h1>
+        </div>
+        <div class="box">
+          <h1 class="animate__animated animate__flipInX">Hello</h1>
+        </div>
+        <div class="box">
+          <h1 class="animate__animated animate__flipOutY">Hello</h1>
+        </div>
+        <div class="box">
+          <h1 class="animate__animated animate__lightSpeedInRight">Hello</h1>
+        </div>
+        <div class="box">
+          <h1 class="animate__animated animate__lightSpeedOutLeft">Hello</h1>
+        </div>
+        <div class="box">
+          <h1 class="animate__animated animate__rotateOut">Hello</h1>
+        </div>
+
+
 
     </div>
   </body>
